@startuml

title __OPTIONS's Class Diagram__\n

  package model.options {
    class Options {
        - gson : Gson
        {static} - resolution : String
        {static} - language : String
        {static} - generalVolume : int
        {static} - effectVolume : int
        {static} - musicVolume : int
        {static} + main()
        {static} - getSettings()
        {static} + getVolume()
        + setVolume()
        {static} + getResolution()
    }
  }
  

  package model.options {
    class Resolution {
        {static} + getSelectedWindowSize()
    }
  }
  

  package model.options {
    enum WindowSize {
      LOW
      MEDIUM
      HIGH
      MEDIUM_FULL
      HIGH_FULL
      width
      height
      isFullscreen
    }
  }
  

  package model.options {
    class Volume {
        {static} + GeneralVolumeValue : double
        {static} + EffectsVolumeValue : double
        {static} + MusicVolumeValue : double
        - effectVolumeValue : double
        {static} + main()
        + start()
        {static} + getSelectedVolumes()
        + getEffectVolumeValue()
        + setEffectVolumeValue()
    }
  }
  

  Options o-- Volume : volume
  Resolution +-down- WindowSize
  Volume -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
